Loglar eklendi
