# AuthService/src/routers/route.js
@@ -15,6 +15,9 @@ router.get("/logout", middleware.authenticateToken, controller.getLogout);
 router.post("/change-password", middleware.authenticateToken, controller.postChangePassword);
 
 //Kullanıcının profilini getirme
-router.get("/profile", middleware.authenticateToken, controller.getProfile)
+router.get("/profile", middleware.authenticateToken, controller.getProfile);
+//tüm kullanıcıları getirme
+router.get('/users', controller.getUsers);
+
 
 module.exports = router;
