# AuthService/swagger.json
@@ -10,6 +10,20 @@
             "url": "http://localhost:3001"
         }
     ],
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
+            }
+        }
+    },
+    "security": [
+        {
+            "bearerAuth": []
+        }
+    ],
     "paths": {
         "/login": {
             "post": {
@@ -116,6 +130,11 @@
         "/logout": {
             "get": {
                 "summary": "Logs out the current user",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "tags": [
                     "Authentication"
                 ],
@@ -132,6 +151,11 @@
         "/change-password": {
             "post": {
                 "summary": "Changes the password for the current user",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "tags": [
                     "Authentication"
                 ],
@@ -163,6 +187,54 @@
                     },
                     "401": {
                         "description": "Invalid old password or fields missing"
+                    }
+                }
+            }
+        },
+        "/users": {
+            "get": {
+                "summary": "Retrieves a list of users",
+                "tags": [
+                    "User Management"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A list of users",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "id": {
+                                                "type": "string",
+                                                "description": "The user's unique identifier"
+                                            },
+                                            "username": {
+                                                "type": "string",
+                                                "description": "The user's username"
+                                            },
+                                            "role": {
+                                                "type": "string",
+                                                "description": "The user's role within the system"
+                                            }
+                                        },
+                                        "required": [
+                                            "id",
+                                            "username",
+                                            "role"
+                                        ]
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized. Token not provided or invalid."
+                    },
+                    "403": {
+                        "description": "Forbidden. The user does not have permission to access this resource."
                     }
                 }
             }
